# 3Dinner

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/api_v1/: router.py
backend/app/api/api_v1/routes/: category.py  employee.py  login.py  media.py  product.py  venta.py
backend/app/assets/: __init__.py
backend/app/core/: config.py
backend/app/core/settings/: development.py
backend/app/models/: employee.py  user.py  venta.py
backend/app/schemas/: __init__.py  category.py  employee.py  producto.py  venta.py
backend/app/services/crud/: __init__.py  base.py  employee.py  product.py  venta.py
backend/app/utils/: generarfactura.py  maqueta.css  maqueta.html
client/: .gitignore  angular.json  package-lock.json  package.json  tsconfig.json
client/src/: index.html  main.ts  styles.scss
client/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.module.ts
client/src/app/core/guards/: empleado.guard.ts
client/src/app/core/interceptors/: errors.interceptor.ts  spinner.interceptor.ts  token.interceptor.ts
client/src/app/core/interfaces/: auth.ts  categoria.ts  empleado.ts  producto.ts  venta.ts
client/src/app/core/services/: auth.service.ts  categorias.service.ts  empleados.service.ts  media.service.ts  productos.service.ts  sharedcomponents.service.ts  ventas.service.ts
client/src/app/shared/: shared.module.ts
client/src/environments/: environment.prod.ts  environment.ts
(+66 files in other folders)
